# peter-terminal-utils

./: .gitignore  AGENTS.md  LICENSE  README.md
ipy/: IPy.bat  IPy.lnk  IPy.sh  README.md  peter_terminal_imports.py  pyproject.toml
linux/: README.md  _common.sh  _runner.sh  bugreport.txt  bugreport2.txt  config.toml  dash-to-panel-settings  pins.conf  sel.json  setup  setup.sh
linux/docs/: libinput-config.md
linux/dotfiles/: .bashrc  .p10k.zsh  .shell_common  .zshrc  PeterProfile.code-profile  init.vim  nemo-desktop.desktop
linux/dotfiles/cursor-config/: .gitignore  PeterProfile.code-profile  extensions.json  extensions.txt  keybindings.json  settings.json
linux/install_scripts/: README.md  manifest.conf  order.txt
linux/install_scripts/cli_tools/: bat.sh  bottom.sh  btop.sh  cloc.sh  delta.sh  docker.sh  eza.sh  fastfetch.sh  fd.sh  fzf.sh  gdu.sh  github_cli.sh  lazygit.sh  neovim.sh  ripgrep.sh  shellcheck.sh  tldr.sh  zoxide.sh  zsh.sh
linux/install_scripts/desktop_applications/: appimage_support.sh  flatpak_apps.sh  remmina.sh  rustdesk.sh  signal.sh  virt_manager.sh  vocalinux.sh
linux/install_scripts/desktop_apps/: flatpak_apps.sh  remmina.sh  rustdesk.sh  signal.sh  snap_apps.sh
linux/install_scripts/dev_tools/: cursor.sh  cursor_ide.sh  docker.sh  local_bin.sh  python_tools.sh  rust.sh  texlive.sh  uv.sh  zed.sh  zsh.sh
linux/install_scripts/development_environment/: claude_code.sh  codex_cli.sh  cursor_cli.sh  cursor_ide.sh  docker.sh  homebrew.sh  huggingface_cli.sh  local_bin.sh  nodejs.sh  python_tools.sh  quarto.sh  rust.sh  texlive.sh  uv.sh  zed.sh
linux/install_scripts/final_steps/: dash_to_panel.sh  default_shell.sh  just_perfection.sh
linux/install_scripts/fonts/: firacode.sh  fontconfig.sh  fonts_dir.sh  nerd_fonts.sh  symbols.sh
linux/install_scripts/git/: github_cli.sh
linux/install_scripts/git_config/: git.sh  git_user.sh
linux/install_scripts/git_setup/: delta.sh  git.sh  git_user.sh  github_cli.sh  glab.sh  lazygit.sh
linux/install_scripts/gnome_desktop/: default_terminal.sh  desktop_background.sh  file_manager.sh  gnome_packages.sh  gnome_terminal.sh  input_settings.sh  interface_settings.sh  libinput_config.sh  switch_user_shortcut.sh  window_settings.sh
linux/install_scripts/gnome_extensions/: dash_to_panel.sh  favorite_apps.sh  just_perfection.sh  tiling_assistant.sh
linux/install_scripts/gnome_settings/: default_terminal.sh  desktop_background.sh  desktop_settings.sh  favorite_apps.sh  file_manager.sh  gnome_packages.sh  gnome_terminal.sh  input_settings.sh  interface_settings.sh  libinput_config.sh  switch_user_shortcut.sh  window_settings.sh
linux/install_scripts/lan_interop/: avahi.sh  croc.sh  gvfs_backends.sh
linux/install_scripts/shell_setup/: default_shell.sh  dotfiles.sh  ipy.sh  ohmyzsh.sh  powerlevel10k.sh  zsh.sh  zsh_plugins.sh
linux/install_scripts/snap_apps/: signal.sh  snap_apps.sh
linux/slurm/: interactive  sq  wsq
linux/tests/: Dockerfile  interactive.sh  run_docker_test  run_docker_test.py
windows/: README.md  _common.ps1  cmdrc.bat  cmdrc_install.bat  config.toml  profile.ps1  setup.bat  setup.ps1  setup_wsl.bat
windows/dotfiles/: ohmyposh.toml  profile.ps1  windows_terminal.json
(+68 files in other folders)
