[project]
name = "ipy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aerosandbox>=4.2.8",
    "ipython>=9.0.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pyvista>=0.44.1",
    "rich>=13.9.4",
    "scipy>=1.15.2",
    "sympy>=1.13.3",
]
