[project]
name = "ipy"
version = "0.1.0"
description = "Personal IPython environment for scientific computing, quick calculations, and prototyping"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "Peter Sharpe", email = "peterdsharpe@gmail.com" },
]
keywords = ["ipython", "scientific-computing", "numpy", "scipy", "torch", "jax"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "aerosandbox[full]>=4.2.8",
    "ipython>=9.0.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pyvista>=0.44.1",
    "rich>=13.9.4",
    "scipy>=1.15.2",
    "sympy>=1.13.3",
    "torch>=2.9.1",
    "jax[cuda13]; sys_platform == 'linux'",
    "jax; sys_platform != 'linux'",
]

[project.urls]
Repository = "https://github.com/peterdsharpe/peter-terminal-utils"

[tool.uv]
environments = [
    "platform_machine == 'x86_64'",
    "platform_machine == 'aarch64'",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu130", marker = "sys_platform != 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
